# celerity-cli

./: Cargo.toml  README.md
src/: cli.rs  config.rs  main.rs  request.rs  util.rs
