[package]
name = "tasks"
version = "0.1.3"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
dirs-next = "2.0.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
taskscheduler = { git = "https://git.pigroy.xyz/pigroy/taskscheduler.git" }
toml = "0.8.19"
color = { git = "https://git.pigroy.xyz/pigroy/color.git" }
serde = "1.0.217"
serde_json = "1.0.138"
chrono = "0.4.39"
