[package]
name = "tasks"
authors = ["Joe Pigott <joe@joepigott.dev>"]
description = "A CLI client for `taskscheduler`, the smart todo list"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
dirs-next = "2.0.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
taskscheduler = { git = "https://github.com/joepigott/taskscheduler.git", tag = "0.2.0" }
toml = "0.8.19"
color = { git = "https://git.joepigott.dev/pigroy/color.git" }
serde = "1.0.217"
serde_json = "1.0.138"
chrono = "0.4.39"
